--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -13,77 +13,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
 
-      body{
-        height: 100dvh;
-        font-family: 'Space Mono', monospace;
-      }
-      .inp-img{
-        position: absolute;
-       
-        left: 5px;
-        top: 6px;
-      }
-      .inp{
-        border-radius: 5px;
-        width: 100%;
-        border: none;
-        background-color: hsl(189, 41%, 97%);
-        padding: 7px;
-      }
-      input[type=radio]{
-        display: none;
-      }
-      input[type=radio] + span{
-          width: 100%;
-          height: 35px;
-          background-color: hsl(183, 100%, 15%);
-          border-radius: 5px;
-          color: white;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-      }
-      input[type=radio] + span:hover{
-        background-color: hsl(172, 67%, 45%);
-      }
-      input[type=radio]:checked + span{
-       background-color: hsl(172, 67%, 45%);
-      }
       
-      #ozelTip{
-        width: 100%;
-        height: 35px;
-        background-color: hsl(189, 41%, 97%);
-        border: none;
-        border-radius: 5px;
-      }
-      .tip-grid{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 10px;
-      }
-      .renk{
-        background-color: hsl(183, 100%, 15%);
-        height: 100%;
-        border-radius: 10px;
-      }
-      .small{
-        font-size: 13;
-        color: lightgray !important;
-      }
-      .para{
-        color: hsl(172, 67%, 45%) !important;
-      }
-      .btn-yesil{
-        background-color: hsl(172, 67%, 45%);
-        width: 100%;
-        height: 40px;
-        border: none;
-      }
-      .btn-yesil:hover{
-        background-color: hsl(184, 14%, 56%);
-      }
   </style>
 </head>
 <body class="bg-success-subtle">
